crates/engram-cli/tests/snapshots/renderer/engram_cli__output__tests__aggregate_stats__plain.snap
---
source: crates/engram-cli/src/output.rs
expression: rendered
---
--- stdout ---
Projects: 3
Reachable: 2
Memories: 128
Decision: 80
Hazard: 48
--- stderr ---
