crates/engram-cli/tests/snapshots/renderer/engram_cli__output__tests__aggregate_stats__pretty.snap
---
source: crates/engram-cli/src/output.rs
expression: rendered
---
--- stdout ---
Total Projects: 3
Reachable: 2
Total Memories: 128

By Type:
  Decision: 80
  Hazard: 48
--- stderr ---
